More condy tests and fixes.